--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,15 @@
+body{
+  background-color: rgb(3, 20, 55);
+}
+
+h1{
+    display: grid;
+    justify-content: center;
+    color: white;
+    margin: 1% 0 0 0 ;
+    font-size: xx-large;
+}
+
 .btn-custom{
     display: grid;
     justify-content: right;
@@ -7,7 +19,7 @@
 }
 
 .card-customes{
- 
     gap: 18px;
     margin-left: 15%;
+    margin-bottom: 2%;
 }
