--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -9,19 +9,24 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="/assets/style.css" rel="stylesheet" type="text/css">
-  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-  <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
+
+  <!-- // for Jquery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- for font awasome icon -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
 
+  <h1>Course Management Web Application</h1>
+
   <div class="btn-custom">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#courseModal" id="btn-add"
       data-whatever="@getbootstrap">Add Course</button>
   </div>
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -32,24 +37,23 @@
           </button>
         </div>
 
-
         <div class="modal-body">
           <form>
             <div class="form-group">
               <label for="course-name" name="courseName" class="col-form-label">Course Name:</label>
-              <input type="text" class="form-control" id="course-name">
+              <input type="text" class="form-control" id="course-name" value="" required>
             </div>
             <div class="form-group">
               <label for="course-duration" class="col-form-label">Course Duration:</label>
-              <input type="text" name="courseDuration" class="form-control" id="course-duration">
+              <input type="text" name="courseDuration" class="form-control" id="course-duration" value="" required>
             </div>
             <div class="form-group">
               <label for="course-fee" class="col-form-label">Course Fees</label>
-              <input type="number" name="courseFees" class="form-control" id="course-fee">
+              <input type="number" name="courseFees" class="form-control" id="course-fee" value="" required>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Save</button>
+              <button type="submit" class="btn btn-primary submit-btn">Save</button>
             </div>
           </form>
         </div>
@@ -57,21 +61,13 @@
     </div>
   </div>
 
-  <!-- <ul>
-        <% for(let i=0 ; i< course.length; i++){ %>
-          <li><%= course[i].courseName %></li>
-          <li><%= course[i].courseDuration %></li>
-          <li><%= course[i].courseFees %></li>
-        <% } %>
-      </ul> -->
-
       <div class="row card-customes ">
   <% for(let i=0 ; i< course.length; i++){ %>   
       <div class="card  col-xl-3 col-lg-4 col-md-6 col-sm-12 card-custom" style="width: 18rem;">
         <div class="card-body">
           <h4 class="card-title">Course Name :<%= course[i].courseName %></h4>
               <p class="card-text">Course Duration :<%= course[i].courseDuration %></p>
-              <p class="card-text">Course Fees : <%= course[i].courseFees %>₹</p>
+              <p class="card-text">Course Fees : <%= course[i].courseFees %>&nbsp;₹</p>
               <button href="#" class="editbtn btn btn-md btn-primary" value="<%= course[i].id %>">Edit</button>
               <button href="" class='dltbtn btn btn-md btn-danger' value="<%= course[i].id %>">Delete</button>
         </div>
@@ -89,26 +85,24 @@
       <script>
         $(document).ready(function () {
 
-          $('form').on('submit', function () {
+          $('.submit-btn').on('click', function () {
 
+            // get the input value from form
             let courseName = $('#course-name');
             let courseDuration = $('#course-duration');
             let courseFees = $('#course-fee');
+
             let courses = { courseName: courseName.val(), courseDuration: courseDuration.val(), courseFees: courseFees.val() };
+
             console.log(courses);
             $.ajax({
               type: 'POST',
               url: '/api/courses/addCourse',
               data: courses,
 
-              success: function (data) { 
-                //do something with the data via front-end framework
-                // window.href();
-                location.reload();
-                // console.log(data);
-              }, 
-              error: function (err) {
-                console.log('sfdfdgdf', err);
+              success: function (data) {    
+                location.href = "/api/courses/allCourses";  
+                     location.reload();
               }
             });
             // return false;
@@ -129,24 +123,81 @@
              });
            });
 
-
-
-
            $(".editbtn").on('click', function (courses) {
-            
-            let id = $(this).val();
-             console.log(id);
-             $.ajax({ 
-               type: "PUT",
-               url: `/api/courses/${id}`,
-               success: function (data) {
-                 //do something with the data via front-end framework
-                 //   location.reload();
-                 location.href = "/api/courses/allCourses";
-               },
-             });
+            $('.updateCourse').remove();
+
+            $('#courseModal').modal('show');
+
+                let id = $(this).val();
+                // call getdata funcion for specific course of data by their id
+
+                let courseData = getdata(id);
+
+                // fetch values from database
+                console.log(courseData);
+                $('#course-name').val(courseData.courseName);
+                $('#course-duration').val(courseData.courseDuration);
+                $('#course-fee').val(courseData.courseFees);
+                  
+                // Append the Edit Butoon at time of clicking the button
+                $('.modal-footer').append($('<input type="submit" value="Edit"  class="updateCourse btn btn-primary">'));
+                $('.submit-btn').hide();
+    
+
+
+                $('.updateCourse').on('click' , function(){
+                  
+                  // Store the Updated Value from Courseform
+                  let courseName = $('#course-name');
+                  let courseDuration = $('#course-duration');
+                  let courseFees = $('#course-fee');
+
+                let coursesUpdatedData = { courseName : courseName.val() ,  courseDuration : courseDuration.val() , courseFees : courseFees.val()}
+
+                 // call put method and update the data
+                  $.ajax({
+                    type: 'PUT',
+                    url: `/api/courses/${id}`,
+                    data: coursesUpdatedData,
+
+                    success: function (data) { 
+                         window.reload();
+                      // location.href = "/api/courses/allCourses";
+                    }, 
+        
+                    });
+                })
+                  
            });
+
+           let getdata = function(id){
+              // initialized a default value 
+              let courseName = "";
+              let courseDuration = "";
+              let courseFees = 0;
+
+              let data;
+
+              $.ajax({
+                type: 'GET',
+                url: `/api/courses/${id}`,
+                async : false,
+                success: function (course) { 
+                    // store the data from that perticular object
+                  data = {
+                    courseName : course.courseName,
+                    courseDuration : course.courseDuration,
+                    courseFees : course.courseFees
+                  }
+                  console.log(JSON.stringify(data));
+                }
+               
+              });
+              console.log(JSON.stringify(data));
+               return data;
+              }
         });
+
       </script>
 </body>
 </html>
