--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -52,7 +52,7 @@
               <input type="number" name="courseFees" class="form-control" id="course-fee" value="" required>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn-close">Close</button>
               <button type="submit" class="btn btn-primary submit-btn">Save</button>
             </div>
           </form>
@@ -196,6 +196,11 @@
               console.log(JSON.stringify(data));
                return data;
               }
+
+                
+              $('#btn-close').on('click', function() {
+                   location.reload();
+              })
         });
 
       </script>
