--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -36,10 +36,10 @@
         </div>
 
         <div class="modal-body">
-          <form>
+          <form method = "post" action="/api/courses/addCourse">
             <div class="form-group">
               <label for="course-name" name="courseName" class="col-form-label">Course Name:</label>
-              <input type="text" class="form-control" id="course-name" value="" required>
+              <input type="text" name="courseName" class="form-control" id="course-name" value="" required>
             </div>
             <div class="form-group">
               <label for="course-duration" class="col-form-label">Course Duration:</label>
@@ -78,29 +78,6 @@
       <script>
         $(document).ready(function () {
 
-          $('.submit-btn').on('click', function () {
-
-            // get the input value from form
-            let courseName = $('#course-name');
-            let courseDuration = $('#course-duration');
-            let courseFees = $('#course-fee');
-
-            let courses = { courseName: courseName.val(), courseDuration: courseDuration.val(), courseFees: courseFees.val() };
-
-            console.log(courses);
-            $.ajax({
-              type: 'POST',
-              url: '/api/courses/addCourse',
-              data: courses,
-
-              success: function (data) {    
-                location.href = "/api/courses/allCourses";  
-                     location.reload();
-              }
-            });
-            // return false;
-          });
-
            $(".dltbtn").on('click', function (courses) {
             
             let id = $(this).val();
@@ -109,7 +86,7 @@
                type: "DELETE",
                url: `/api/courses/${id}`,
                success: function (data) {
-              
+               
                  location.href = "/api/courses/allCourses";
                },
              });
@@ -131,7 +108,7 @@
                 $('#course-duration').val(courseData.courseDuration);
                 $('#course-fee').val(courseData.courseFees);
                   
-                // Append the Edit Butoon at time of clicking the button
+                // Append the Edit Butoon at time of clicking the edit button on course
                 $('.modal-footer').append($('<input type="submit" value="Edit"  class="updateCourse btn btn-primary">'));
                 $('.submit-btn').hide();
     
@@ -152,8 +129,8 @@
                     data: coursesUpdatedData,
 
                     success: function (data) { 
-                         window.reload();
-                      // location.href = "/api/courses/allCourses";
+                         // window.reload();
+                      location.href = "/api/courses/allCourses";
                     }, 
         
                     });
